hphp/test/zend/good/zend/access_modifiers_004.php
<?php

class test {
	abstract abstract function foo() {
	}
}

echo "Done\n";
?>